# Civi

./: .env.deploy.example  .env.example  .gitattributes  .gitignore  README.md  _conv.txt  _gw.txt  _gwt.txt  _tmp_dump_persona_result.py  _tmp_expand_licencias.py  _tmp_inspect_accordion.py
services/knowledge-service/: pyproject.toml
services/knowledge-service/src/knowledge_service/: __init__.py  main.py
services/knowledge-service/tests/: test_knowledge_service.py
services/places-service/: pyproject.toml
services/places-service/data/processed/: entities.json
services/places-service/data/raw/: metadata.json  places_colombia_original.json
services/places-service/data/reference/: divipola_metadata.json  divipola_municipios.json
services/places-service/data/reports/: address_review.json  data_quality_metrics.json  document_review.json  duplicate_candidates.json  geocoding_report.json  http_geocoding_attempts_report.json  idempotency_report.json  manizales_geocode_import_report.json  merged_duplicates.json  phone_review.json  postgresql_legacy_migration_report.json  postgresql_validation_report.json  reconciliation.json  reconciliation_after_fix.json  santander_geocode_import_report.json  (+3 more)
services/places-service/static/: manizales_map.html  santander_map.html
services/places-service/tests/: test_catalog_pipeline.py  test_cli_hardening.py  test_http_geocoder.py  test_import_geocodes.py  test_legacy_migration.py  test_manage_presence.py  test_manizales_geocodes.py  test_osrm_nearest.py  test_places_service.py  test_presence_partners.py  test_santander_geocodes.py
(+405 files in other folders)
