[project]
name = "civi-knowledge-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "pydantic-settings>=2.4",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
knowledge_service = ["data/corpus/*.md"]
