[project]
name = "civi-places-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "httpx>=0.27",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "psycopg[binary]>=3.2",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
